--- a/index.html
+++ b/index.html
@@ -27,29 +27,15 @@
 				</ul>
 			</nav>
 		</header>
-		
-		<main>
 			<section class="sidebar">
 				<nav class="sidebar-nav">
 					<ul>
-						<li>
-							<p>Ноутбуки</p>
-						</li>
-						<li>
-							<p>Планшеты</p>
-						</li>
-						<li class="active">
-							<p>Телефоны</p>
-						</li>
-						<li>
-							<p>Телевизоры</p>
-						</li>
-						<li>
-							<p>Бытовая техника</p>
-						</li>
-						<li>
-							<p>Автотовары</p>
-						</li>
+						<li>Ноутбуки</li>
+						<li>Планшеты</li>
+						<li class="active">Телефоны</li>
+						<li>Телевизоры</li>
+						<li>Бытовая техника</li>
+						<li>Автотовары</li>
 					</ul>
 				</nav>
 			</section>
@@ -59,25 +45,16 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ratione maiores voluptate ipsam. Aperiam ab tempore obcaecati eaque earum, magni amet, quibusdam non voluptates enim in quos voluptatum eum ad.</p>
 				</div>
 			</section>
-		</main>
-		
+
 		<footer>
 			<nav class="footer-nav">
 				<ul>
-					<li>
-						<p>Главная</p>
-					</li>
-					<li>
-						<p>Товары</p>
-					</li>
-					<li>
-						<p>О нас</p>
-					</li>
-					<li>
-						<p>Контакты</p>
-					</li>
+					<li>Главная</li>
+					<li>Товары</li>
+					<li>О нас</li>
+					<li>Контакты</li>
+					<li class="copyright">2014 © All rights reserved</li>
 				</ul>
-				<p class="copyright">2014 © All rights reserved</p>
 			</nav>
 		</footer>
 
