--- a/index.html
+++ b/index.html
@@ -12,39 +12,33 @@
 			<h1>Fitness</h1>
 			<nav class="main-nav">
 				<ul>
-					<li>
-						<p class="link"><a href="#">Главная</a></p>
-					</li>
-					<li class="active">
-						<p class="link"><a href="#">Товары</a></p>
-					</li>
-					<li>
-						<p class="link"><a href="#">О нас</a></p>
-					</li>
-					<li>
-						<p class="link"><a href="#">Контакты</a></p>
-					</li>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Товары</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Контакты</a></li>
 				</ul>
 			</nav>
 		</header>
-			<section class="sidebar">
-				<nav class="sidebar-nav">
-					<ul>
-						<li>Ноутбуки</li>
-						<li>Планшеты</li>
-						<li class="active">Телефоны</li>
-						<li>Телевизоры</li>
-						<li>Бытовая техника</li>
-						<li>Автотовары</li>
-					</ul>
-				</nav>
-			</section>
-			<section class="main-content">
+		
+		<section class="main">
+			<nav class="sidebar-nav">
+				<ul>
+					<li><a href="#">Ноутбуки</a></li>
+					<li><a href="#">Планшеты</a></li>
+					<li class="active"><a href="#">Телефоны</a></li>
+					<li><a href="#">Телевизоры</a></li>
+					<li><a href="#">Бытовая техника</a></li>
+					<li><a href="#">Автотовары</a></li>
+				</ul>
+			</nav>
+			
+			<div class="main-content">
 				<img src="img/bike.jpg" alt="bike">
 				<div class="article">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ratione maiores voluptate ipsam. Aperiam ab tempore obcaecati eaque earum, magni amet, quibusdam non voluptates enim in quos voluptatum eum ad.</p>
 				</div>
-			</section>
+			</div>
+		</section>
 
 		<footer>
 			<nav class="footer-nav">
