--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<ul>
 					<li><a href="#">Ноутбуки</a></li>
 					<li><a href="#">Планшеты</a></li>
-					<li class="active"><a href="#">Телефоны</a></li>
+					<li><a href="#">Телефоны</a></li>
 					<li><a href="#">Телевизоры</a></li>
 					<li><a href="#">Бытовая техника</a></li>
 					<li><a href="#">Автотовары</a></li>
@@ -43,10 +43,10 @@
 		<footer>
 			<nav class="footer-nav">
 				<ul>
-					<li>Главная</li>
-					<li>Товары</li>
-					<li>О нас</li>
-					<li>Контакты</li>
+					<li><a href="#">Главнаяaa</a></li>
+					<li><a href="#">Товары</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Контакты</a></li>
 					<li class="copyright">2014 © All rights reserved</li>
 				</ul>
 			</nav>
